--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="sample.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
   <columnConstraints>
      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
@@ -16,8 +19,14 @@
     <RowConstraints maxHeight="339.0" minHeight="10.0" prefHeight="339.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TextArea fx:id="tarea_skriv" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-      <Button fx:id="btn_save" mnemonicParsing="false" text="Save" onAction="#handleButtonAction"/>
-      <Button fx:id="btn_open" mnemonicParsing="false" text="Open" onAction="#handleButtonAction" GridPane.columnIndex="1" />
+      <TextArea fx:id="tarea_skriv" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+      <Button fx:id="btn_save" mnemonicParsing="false" onAction="#handleButtonAction" text="Save" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+      <Button fx:id="btn_open" mnemonicParsing="false" onAction="#handleButtonAction" text="Open" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+      <Button fx:id="btn_saveas" mnemonicParsing="false" onAction="#handleButtonAction" text="Save as" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="btn_test" mnemonicParsing="false" onAction="#handleButtonAction" text="Test" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
    </children>
 </GridPane>
